unpackaged/main/default/objects/bt_base__Form_Big_List_Option__c/bt_base__Form_Big_List_Option__c.object-meta.xml
<CustomObject>
    <description>Possible selections for your Big List.</description>
    <label>BT Form Big List Option</label>
    <nameField>
        <displayFormat>FBLO-{000000}</displayFormat>
        <label>BT Form Big List Option Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BT Form Big List Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>