unpackaged/main/default/objects/bt_base__Form_Big_List_Option__c/fields/bt_base__Form_Big_List_Group__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Form_Big_List_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Form Big List Group related to this Option.</description>
    <inlineHelpText>The Form Big List Group related to this Option.</inlineHelpText>
    <label>BT Form Big List Group</label>
    <referenceTo>bt_base__Form_Big_List_Group__c</referenceTo>
    <relationshipLabel>BT Form Big List Options</relationshipLabel>
    <relationshipName>Form_Big_List_Options</relationshipName>
    <type>Lookup</type>
</CustomField>