unpackaged/main/default/objects/bt_base__Form_Big_List_Option__c/fields/bt_base__Option_Name__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Option_Name__c</fullName>
    <description>This is the value that is saved in Salesforce as the answer.</description>
    <inlineHelpText>This is the value that is saved in Salesforce as the answer.</inlineHelpText>
    <label>Option Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>