unpackaged/main/default/objects/bt_base__Form_Big_List_Option__c/fields/bt_base__Option_Value__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Option_Value__c</fullName>
    <description>This is the text visible on your site (not the value written to the field upon submission).</description>
    <inlineHelpText>This is the text visible on your site (not the value written to the field upon submission).</inlineHelpText>
    <label>Option Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>